[project]
name = "uncle-joes-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Gerbsch",email = "lucasgerbsch@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "google-cloud-bigquery (>=3.41.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
